Use relative paths throughout docs so that versioning works

--- a/docs/reference/s3.md
+++ b/docs/reference/s3.md
@@ -11,7 +11,7 @@ has_children: false
 The S3 Gateway emulates a subset of the [API exposed by S3](https://docs.aws.amazon.com/AmazonS3/latest/API/Welcome.html){:target="_blank"}.
 This subset includes all API endpoints relevant to data systems.
 
-For more information, see [architecture](/understand/architecture.md#s3-gateway)
+For more information, see [architecture](../understand/architecture.md#s3-gateway)
 
 lakeFS supports the following API operations:
 
