--- a/docs/reference/s3.md
+++ b/docs/reference/s3.md
@@ -10,7 +10,7 @@ has_children: false
 The S3 Gateway emulates a subset of the [API exposed by S3](https://docs.aws.amazon.com/AmazonS3/latest/API/Welcome.html){:target="_blank"}.
 This subset includes all API endpoints relevant to data systems.
 
-For more information, see [architecture]({{ site.baseurl }}/understand/architecture.md#s3-gateway)
+For more information, see [architecture][s3-gateway].
 
 lakeFS supports the following API operations:
 
@@ -45,3 +45,5 @@ lakeFS supports the following API operations:
    1. [Upload Part](https://docs.aws.amazon.com/AmazonS3/latest/API/API_UploadPart.html){:target="_blank"}
    1. [UploadPartCopy](https://docs.aws.amazon.com/AmazonS3/latest/API/API_UploadPartCopy.html){:target="_blank"}
  
+
+[s3-gateway]:  {% link understand/architecture.md %}#s3-gateway
