--- a/docs/reference/s3.md
+++ b/docs/reference/s3.md
@@ -1,6 +1,6 @@
 ---
-title: S3 Supported API
-description: "S3-supported API. lakeFS supports the following API operations: Identity and authorization, Bucket operations, Object operations and listing"
+title: S3 Gateway API
+description: "S3 Gateway API. lakeFS supports the following API operations: Identity and authorization, Bucket operations, Object operations and listing"
 parent: Reference
 has_children: false
 ---
