[Docs] Add content to Reference index page, remove nav_order for child pages (#6431)
* Add content to Reference index page, remove nav_order for child pages

* Move security docs to their own subfolder

* Update source

* Fix links

* Update docs/howto/import.md

Co-authored-by: Oz Katz <oz.katz@treeverse.io>

---------

Co-authored-by: Oz Katz <oz.katz@treeverse.io>

--- a/docs/reference/s3.md
+++ b/docs/reference/s3.md
@@ -1,8 +1,7 @@
 ---
-title: S3 Supported API
-description: "S3-supported API. lakeFS supports the following API operations: Identity and authorization, Bucket operations, Object operations and listing"
+title: S3 Gateway API
+description: "S3 Gateway API. lakeFS supports the following API operations: Identity and authorization, Bucket operations, Object operations and listing"
 parent: Reference
-nav_order: 50
 has_children: false
 ---
 # S3-Supported API
