--- a/docs/404.md
+++ b/docs/404.md
@@ -5,7 +5,7 @@ nav_exclude: true
 
 # Page not found
 
-## We can’t seem to find the page you’re looking for.
+## Uh-oh, it seems like the page you're looking for has vanished.
 
 Error code: 404
 
