--- a/docs/404.md
+++ b/docs/404.md
@@ -3,7 +3,7 @@ permalink: /404.html
 nav_exclude: true
 ---
 
-# Page not found
+# Page not found (404)
 
 ## Uh-oh, it seems like the page you're looking for has vanished.
 
